<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#0E95DD"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#ffffff">

            <EditText
                android:id="@+id/add_item_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/title_hint" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:background="#ffffff">

            <EditText
                android:id="@+id/add_item_description"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="start"
                android:hint="@string/description_hint" />

        </RelativeLayout>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#003E5F"
            android:clipToPadding="true">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Spinner
                    android:id="@+id/add_item_category"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:backgroundTint="#ffffff" />

            </RelativeLayout>

        </android.support.v7.widget.CardView>

        <ImageView
            android:id="@+id/add_item_image"
            android:layout_width="match_parent"
            android:layout_height="350dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="#ffffff" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#003E5F"
            android:gravity="center">

            <ImageView
                android:id="@+id/add_image_camera"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:padding="10dp"
                android:src="@drawable/ic_camera"
                android:tint="#ffffff" />

            <ImageView
                android:id="@+id/add_image_gallery"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/add_image_camera"
                android:padding="10dp"
                android:src="@drawable/ic_gallery"
                android:tint="#ffffff" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/add_item_add"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="#003E5F"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/post"
                android:textColor="#ffffff"
                android:textSize="30sp"
                android:textStyle="bold" />

        </RelativeLayout>

    </LinearLayout>
</ScrollView>